test/classes/delete-free/lifetimes/bad-append-borrow.good
bad-append-borrow.chpl:22: In function 'addone':
bad-append-borrow.chpl:27: error: Actual argument does not meet called function lifetime constraint
note: called function list(borrowed I, false).append(x: borrowed I)
note: includes lifetime constraint this < x
