test/classes/delete-free/lifetimes/bad-append-borrow.future
#
# This should produce an error message similar to the one produced by the
# code in "bad-push-back-borrow.chpl", however it seems to compile just
# fine.
#
# See: https://github.com/chapel-lang/chapel/issues/13613
#
# NOTE: The `.good` file for this future may not be totally correct, I had
# to wing it without knowing the correct form of the output.
#

